--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "3d-force-graph": "^1.67.6",
     "@growthbunker/vueflags": "^0.1.14",
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "jquery": "^3.5.1",
     "register-service-worker": "^1.7.1",
+    "three": "^0.124.0",
     "vue": "^2.6.11",
-    "vue-network-d3": "^0.1.2",
     "vue-router": "^3.2.0",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0"
