--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jquery": "^3.5.1",
     "register-service-worker": "^1.7.1",
     "three": "^0.124.0",
+    "three-spritetext": "^1.5.3",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuetify": "^2.2.11",
