--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.5",
     "jquery": "^3.5.1",
     "register-service-worker": "^1.7.1",
+    "stats.js": "^0.17.0",
     "three": "^0.124.0",
     "three-spritetext": "^1.5.3",
     "vue": "^2.6.11",
