--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@growthbunker/vueflags": "^0.1.14",
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
+    "icicle-chart": "^1.4.2",
     "jquery": "^3.5.1",
     "register-service-worker": "^1.7.1",
     "stats.js": "^0.17.0",
